--- a/app/src/main/res/layout/fragment_introduction.xml
+++ b/app/src/main/res/layout/fragment_introduction.xml
@@ -48,14 +48,16 @@
         app:layout_constraintTop_toBottomOf="@id/guidelineLeftTexture" />
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/buttonStart"
+        style="@style/blueButtonStyle"
         android:layout_width="@dimen/smallButtonWidht"
         android:layout_height="@dimen/smallButtonHeight"
-        style="@style/blueButtonStyle"
-        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
-        app:layout_constraintStart_toStartOf="@id/tvWelcome"
-        app:layout_constraintEnd_toEndOf="@id/tvWelcome"
+        android:text="Start"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="Start"/>
+        app:layout_constraintEnd_toEndOf="@id/tvWelcome"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="@id/tvWelcome"
+        app:layout_constraintTop_toBottomOf="@id/tvWelcome" />
 
     <TextView
         android:id="@+id/tvWelcome"
