--- a/app/src/main/res/layout/special_rv_item.xml
+++ b/app/src/main/res/layout/special_rv_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="230dp"
+    android:layout_width="285dp"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="0dp"
@@ -15,27 +15,28 @@
 
         <ImageView
             android:id="@+id/imageSpecialRvItem"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
+            android:layout_width="135dp"
+            android:layout_height="100dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
              />
 
         <TextView
             android:id="@+id/tvSpecialProductName"
-            android:layout_width="80dp"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="Scotch Premium"
             app:layout_constraintStart_toEndOf="@id/imageSpecialRvItem"
             app:layout_constraintTop_toTopOf="@id/imageSpecialRvItem"
             android:layout_marginTop="7dp"
-            android:layout_marginStart="18dp"
+            android:layout_marginStart="10dp"
             android:fontFamily="@font/poppins_thin"
             android:textStyle="bold"
             android:textColor="@color/black"
-            android:textSize="17sp"/>
+            android:textSize="15sp"
+            android:maxLines="2"/>
 
         <TextView
             android:id="@+id/tvSpecialProductPrice"
@@ -45,12 +46,12 @@
             app:layout_constraintStart_toStartOf="@id/tvSpecialProductName"
             app:layout_constraintTop_toBottomOf="@id/tvSpecialProductName"
             android:textColor="@color/black"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:fontFamily="@font/sf_pro_display"/>
 
         <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
             android:id="@+id/btn_add_to_cart"
-            android:layout_width="77dp"
+            android:layout_width="80dp"
             android:layout_height="25dp"
             android:background="@drawable/blue_background"
             android:fontFamily="@font/poppins_light"
@@ -58,19 +59,22 @@
             android:textColor="@color/white"
             android:textSize="10sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@id/tvSpecialProductPrice"
             app:layout_constraintTop_toBottomOf="@id/tvSpecialProductPrice"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="10dp"
             android:textAllCaps="false"
             />
 
         <LinearLayout
-            android:layout_width="23dp"
-            android:layout_height="23dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            app:layout_constraintStart_toEndOf="@id/btn_add_to_cart"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="5dp"
             android:background="@drawable/icon_background"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
             <ImageView
                 android:layout_width="10dp"
                 android:layout_height="10dp"
