--- a/app/src/main/res/layout/best_deals_rv_item.xml
+++ b/app/src/main/res/layout/best_deals_rv_item.xml
@@ -1,38 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/g_card_background"
-    android:elevation="0dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardElevation="0dp"
+    app:cardCornerRadius="5dp"
+    app:cardBackgroundColor="@color/g_card_background"
+    app:cardUseCompatPadding="true"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="88dp">
+        android:layout_height="match_parent"
+        android:padding="10dp">
 
         <ImageView
             android:id="@+id/img_best_deal"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
+            android:layout_width="135dp"
+            android:layout_height="100dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="16dp"
             android:layout_marginTop="10dp" />
 
         <TextView
             android:id="@+id/tv_deal_product_name"
-            android:layout_width="80dp"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="Scotch Premium"
             app:layout_constraintStart_toEndOf="@id/img_best_deal"
             app:layout_constraintTop_toTopOf="@id/img_best_deal"
             android:layout_marginTop="10dp"
             android:layout_marginStart="10dp"
-            android:fontFamily="@font/poppins_light"
+            android:fontFamily="@font/poppins_thin"
             android:textStyle="bold"
             android:textColor="@color/black"
-            android:textSize="9sp"/>
+            android:textSize="15sp"
+            android:maxLines="2"/>
 
         <TextView
             android:id="@+id/tv_old_price"
@@ -42,7 +45,7 @@
             app:layout_constraintTop_toBottomOf="@id/tv_deal_product_name"
             app:layout_constraintStart_toEndOf="@id/tv_new_price"
             android:textColor="@color/g_gray700"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:fontFamily="@font/sf_pro_display"
             android:layout_marginStart="8dp"
             />
@@ -56,24 +59,24 @@
             app:layout_constraintTop_toBottomOf="@id/tv_deal_product_name"
 
             android:textColor="@color/black"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:fontFamily="@font/sf_pro_display"/>
 
         <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
             android:id="@+id/btn_see_product"
-            android:layout_width="83dp"
-            android:layout_height="28dp"
+            android:layout_width="80dp"
+            android:layout_height="25dp"
             android:background="@drawable/blue_background"
             android:fontFamily="@font/poppins_light"
             android:text="See product"
             android:textColor="@color/white"
             android:textSize="10dp"
             android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@id/tv_deal_product_name"
-            app:layout_constraintTop_toTopOf="@id/tv_deal_product_name"
+            app:layout_constraintStart_toStartOf="@id/tv_new_price"
+            app:layout_constraintTop_toBottomOf="@id/tv_new_price"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="10dp"
             android:textAllCaps="false"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="20dp"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
