--- a/app/src/main/res/layout/fragment_main_category.xml
+++ b/app/src/main/res/layout/fragment_main_category.xml
@@ -24,15 +24,30 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:indeterminateTint="@color/g_gray700"/>
 
+            <TextView
+
+                android:id="@+id/tvSpecialProducts"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/poppins_thin"
+                android:text="Special Products"
+                android:textColor="@color/black"
+                android:textSize="22sp"
+                app:layout_constraintStart_toStartOf="@id/rvSpecialProducts"
+                app:layout_constraintTop_toTopOf="parent"/>
+
             <androidx.recyclerview.widget.RecyclerView
+                android:background="@color/minimal_background_color"
                 android:id="@+id/rvSpecialProducts"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="5dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@id/tvSpecialProducts"/>
 
 
 
@@ -43,7 +58,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/poppins_thin"
-                android:text="Best deals"
+                android:text="Best Deals"
                 android:textColor="@color/black"
                 android:textSize="22sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -51,10 +66,12 @@
                 app:layout_constraintTop_toBottomOf="@id/rvSpecialProducts"/>
 
             <androidx.recyclerview.widget.RecyclerView
+                android:background="@color/minimal_background_color"
                 android:id="@+id/rvBestDealsProducts"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="5dp"
                 app:layout_constraintStart_toStartOf="@id/rvSpecialProducts"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvBestDeals"/>
@@ -64,7 +81,7 @@
                 android:id="@+id/tvBestProducts"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="20dp"
                 android:fontFamily="@font/poppins_thin"
                 android:text="Best Products"
                 android:textColor="@color/black"
@@ -74,11 +91,12 @@
 
 
             <androidx.recyclerview.widget.RecyclerView
+                android:background="@color/minimal_background_color"
                 android:id="@+id/rvBestProducts"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:overScrollMode="never"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
