--- a/app/src/main/res/layout/special_rv_item.xml
+++ b/app/src/main/res/layout/special_rv_item.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="285dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:outlineSpotShadowColor="@color/g_card_background"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="0dp"
     app:cardCornerRadius="5dp"
-    app:cardBackgroundColor="@color/g_card_background"
     app:cardUseCompatPadding="true"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:padding="10dp">
 
         <ImageView
             android:id="@+id/imageSpecialRvItem"
@@ -19,7 +20,6 @@
             android:layout_height="100dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
              />
 
@@ -70,7 +70,8 @@
             android:layout_width="25dp"
             android:layout_height="25dp"
             app:layout_constraintStart_toEndOf="@id/btn_add_to_cart"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/btn_add_to_cart"
+            app:layout_constraintTop_toTopOf="@id/btn_add_to_cart"
             android:layout_marginStart="5dp"
             android:background="@drawable/icon_background"
             android:orientation="vertical"
