--- a/app/src/main/res/layout/fragment_base_category.xml
+++ b/app/src/main/res/layout/fragment_base_category.xml
@@ -10,13 +10,42 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvOffer"
-            android:layout_width="match_parent"
+
+        <ProgressBar
+            android:id="@+id/offerProductsProgressBar"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:indeterminateTint="@color/g_blue_gray200"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/rvOfferProducts"
+            app:layout_constraintBottom_toBottomOf="@id/rvOfferProducts"
+            android:visibility="gone"/>
+
+        <TextView
+
+            android:id="@+id/tvOfferProducts"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/poppins_thin"
+            android:text="Discount Products"
+            android:textColor="@color/black"
+            android:textSize="22sp"
+            app:layout_constraintStart_toStartOf="@id/rvOfferProducts"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvOfferProducts"
+            android:background="@color/minimal_background_color"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:overScrollMode="never"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvOfferProducts"
             android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintEnd_toStartOf="@id/offerProductsProgressBar"
             android:layout_marginTop="10dp"/>
 
         <TextView
@@ -29,8 +58,8 @@
             android:text="Best Products"
             android:textColor="@color/black"
             android:textSize="22sp"
-            app:layout_constraintStart_toStartOf="@id/rvOffer"
-            app:layout_constraintTop_toBottomOf="@id/rvOffer"/>
+            app:layout_constraintStart_toStartOf="@id/rvOfferProducts"
+            app:layout_constraintTop_toBottomOf="@id/rvOfferProducts"/>
 
 
         <androidx.recyclerview.widget.RecyclerView
@@ -44,6 +73,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvBestProducts"/>
+
+        <ProgressBar
+            android:id="@+id/bestProductsProgressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminateTint="@color/g_blue_gray200"
+            app:layout_constraintTop_toBottomOf="@id/rvBestProducts"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="gone"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
