--- a/app/src/main/res/layout/product_rv_item.xml
+++ b/app/src/main/res/layout/product_rv_item.xml
@@ -28,13 +28,13 @@
 
         <TextView
             android:id="@+id/tv_name"
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
+            android:layout_width="125dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="20dp"
             android:layout_weight="1"
             android:fontFamily="@font/poppins_light"
             android:maxLines="2"
-            android:layout_marginTop="20dp"
-            android:text="Chair"
+            android:text="Casual Dressing Table"
             android:textColor="@color/black"
             android:textSize="14sp"
             android:textStyle="bold"
