--- a/app/src/main/res/layout/cart_product_item.xml
+++ b/app/src/main/res/layout/cart_product_item.xml
@@ -8,23 +8,23 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
         <View
             android:id="@+id/line"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_marginTop="10dp"
-            android:background="@color/white"
+            android:background="@color/g_gray500"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
         <ImageView
             android:id="@+id/imageCartProduct"
-            android:layout_width="80dp"
-            android:layout_height="75dp"
-            android:layout_marginBottom="5dp"
+            android:layout_width="90dp"
+            android:layout_height="85dp"
+            android:layout_marginBottom="15dp"
             app:layout_constraintBottom_toTopOf="@+id/line"
             app:layout_constraintStart_toStartOf="parent"
             android:scaleType="centerCrop"
@@ -32,17 +32,17 @@
 
         <TextView
             android:id="@+id/tvProductCartName"
-            android:layout_width="180dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="5dp"
             android:fontFamily="@font/poppins_light"
-            android:text="Chair"
+            android:text="Modern Slide Cupborad"
             android:textColor="@color/black"
             android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/imageCartProduct"
-            app:layout_constraintTop_toTopOf="@id/imageCartProduct"/>
+            app:layout_constraintTop_toTopOf="@id/imageCartProduct" />
 
 
 
@@ -54,8 +54,9 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_light"
             android:text="$50"
+            android:layout_marginTop="5dp"
             android:textColor="@color/black"
-            android:textSize="10sp"
+            android:textSize="13sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@id/tvProductCartName"
             app:layout_constraintTop_toBottomOf="@id/tvProductCartName"/>
@@ -102,8 +103,8 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imageCartProductColor"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
+            android:layout_width="25dp"
+            android:layout_height="20dp"
             android:layout_marginTop="5dp"
             android:src="@color/g_blue"
             app:layout_constraintStart_toStartOf="@id/tvProductCartPrice"
@@ -111,8 +112,8 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imageCartProductSize"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
+            android:layout_width="25dp"
+            android:layout_height="20dp"
             android:layout_marginStart="5dp"
             android:src="@color/g_blue_gray200"
             app:layout_constraintStart_toEndOf="@id/imageCartProductColor"
@@ -134,17 +135,6 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
-
-
-
-
-
-
-
 
 
 </androidx.cardview.widget.CardView>
