--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -124,7 +124,7 @@
 
         <br.com.simplepass.loadingbutton.customViews.CircularProgressButton android:id="@+id/buttonCheckout" style="@style/blueButtonStyle" android:layout_width="0dp" android:layout_height="@dimen/mediumButtonHeight" android:layout_marginTop="45dp" android:layout_marginBottom="20dp" android:text="Check out" app:layout_constraintEnd_toEndOf="@id/rightGuideLine" app:layout_constraintStart_toStartOf="@id/leftGuideLine" app:layout_constraintTop_toBottomOf="@id/totalBoxContainer" app:spinning_bar_color="@color/white"/>
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/layoutCarEmpty"
+            android:id="@+id/layout_cart_empty"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="gone">
