--- a/app/src/main/res/navigation/shopping_graph.xml
+++ b/app/src/main/res/navigation/shopping_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/shopping_graph"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/userAccountFragment">
 
     <fragment
         android:id="@+id/cartFragment"
@@ -74,4 +74,8 @@
             android:name="products"
             app:argType="com.example.mebelcart.data.CartProduct[]" />
     </fragment>
+    <fragment
+        android:id="@+id/userAccountFragment"
+        android:name="com.example.mebelcart.fragments.settings.UserAccountFragment"
+        android:label="UserAccountFragment" />
 </navigation>
