--- a/app/src/main/res/navigation/shopping_graph.xml
+++ b/app/src/main/res/navigation/shopping_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/shopping_graph"
-    app:startDestination="@id/userAccountFragment">
+    app:startDestination="@id/ordersFragment">
 
     <fragment
         android:id="@+id/cartFragment"
@@ -78,4 +78,8 @@
         android:id="@+id/userAccountFragment"
         android:name="com.example.mebelcart.fragments.settings.UserAccountFragment"
         android:label="UserAccountFragment" />
+    <fragment
+        android:id="@+id/ordersFragment"
+        android:name="com.example.mebelcart.fragments.settings.AllOrdersFragment"
+        android:label="OrdersFragment" />
 </navigation>
