--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="g_red">#FF0000</color>
     <color name="g_gray500">#969899</color>
     <color name="g_orange_yellow">#F8BA00</color>
+    <color name="g_green">#11FF0D</color>
 
     <!-- Minimal and Modern -->
     <color name="minimal_border_color">#D3D3D3</color> <!-- Light Gray -->
