--- a/app/src/main/res/navigation/shopping_graph.xml
+++ b/app/src/main/res/navigation/shopping_graph.xml
@@ -64,7 +64,13 @@
         android:id="@+id/addressFragment"
         android:name="com.example.mebelcart.fragments.shopping.AddressFragment"
         android:label="AddressFragment"
-        tools:layout="@layout/fragment_address"/>
+        tools:layout="@layout/fragment_address">
+        <argument
+            android:name="address"
+            app:argType="com.example.mebelcart.data.Address"
+            app:nullable="true"
+            android:defaultValue="@null" />
+    </fragment>
     <fragment
         android:id="@+id/billingFragment"
         android:name="com.example.mebelcart.fragments.shopping.BillingFragment"
@@ -79,6 +85,9 @@
         <argument
             android:name="products"
             app:argType="com.example.mebelcart.data.CartProduct[]" />
+        <argument
+            android:name="payment"
+            app:argType="boolean" />
     </fragment>
     <fragment
         android:id="@+id/userAccountFragment"
